--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,12 @@
-// include bootstrap
-@import "node_modules/bootstrap/scss/bootstrap";
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
 
 .active_ {
-  background-color: red;
+  background-color: #f50000;
 }
