--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,3 +11,15 @@
   background-color: #f50000;
 }
 
+.overlay {
+  position: fixed;
+  inset: 2rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  display: flex;
+
+  .pop-up {
+    margin: auto;
+    background-color: white;
+  }
+}
