Add carousel in home

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,8 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+@import '../views/lbc/assets/sass/app';
+
 .active_ {
   background-color: #f50000;
 }
